# htmx-rust

./: .env  Cargo.toml  db_init.sql
src/: auth.rs  main.rs
templates/: base.html  cancel-modal-button.html  index.html  login.html  modal-base.html  spinner.html  story-create.html  story-list-element-delete.html  story-list-element-new.html  story-list-element.html  story-list.html
