[package]
name = "zmtwc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
axum = "0.6.19"
tokio = { version = "1", features = ["full"] }
serde = "1.0.180"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
minijinja = { version = "1.0.5", features = [ "loader" ] }
askama = "0.11"
anyhow = "1.0"
dotenv_rs = "0.16.1"